--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>TiddlyWiki — a non-linear personal web notebook</title>
+<title>StartingWiki — a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -139,7 +139,44 @@ Error message and password prompt
 <div id="splashArea">
 
 
-<div class=" tc-reveal" hidden="true"></div>
+<p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
+
+<li>$:/core</li>
+
+<li>$:/DefaultTiddlers</li>
+
+<li>$:/GitHub/Branch</li>
+
+<li>$:/GitHub/Filename</li>
+
+<li>$:/GitHub/Path</li>
+
+<li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/Username</li>
+
+<li>$:/isEncrypted</li>
+
+<li>$:/SiteTitle</li>
+
+<li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
+
+<li>$:/status/RequireReloadDueToPluginChange</li>
+
+<li>$:/StoryList</li>
+
+<li>$:/themes/tiddlywiki/snowwhite</li>
+
+<li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>StartingWiki</li>
+
+</ul>
+</p>
 
 
 
@@ -10016,8 +10053,44 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210203171852243" modified="20210203171913471" title="$:/DefaultTiddlers">
+<pre>StartingWiki</pre>
+</div>
+<div created="20210203172112935" modified="20210203172138425" title="$:/GitHub/Branch">
+<pre>gh-pages</pre>
+</div>
+<div created="20210203174516565" modified="20210203174519124" title="$:/GitHub/Filename">
+<pre>index.html</pre>
+</div>
+<div created="20210203174514481" modified="20210203174757882" title="$:/GitHub/Path">
+<pre>/</pre>
+</div>
+<div created="20210203174509285" modified="20210203174942192" title="$:/GitHub/Repo">
+<pre>ecoranti/mediawiki</pre>
+</div>
+<div created="20210203171934567" modified="20210203171935130" title="$:/GitHub/Username">
+<pre>ecoranti</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
+</div>
+<div created="20210203171821032" modified="20210203171916752" title="$:/SiteTitle">
+<pre>StartingWiki</pre>
+</div>
+<div created="20210203171801108" modified="20210203171932785" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
+</div>
+<div created="20210203171802541" modified="20210203174815327" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+</div>
+<div created="20210203171927214" modified="20210203171927214" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
+</div>
+<div title="$:/status/RequireReloadDueToPluginChange">
+<pre>no</pre>
+</div>
+<div created="20210203174432928" list="$:/ControlPanel StartingWiki" modified="20210203174432928" title="$:/StoryList">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
 <pre>{
@@ -10127,6 +10200,24 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20210203172016312" modified="20210203172018845" title="StartingWiki">
+<pre>\define lingo-base() $:/language/ControlPanel/Basics/
+Welcome to ~TiddlyWiki and the ~TiddlyWiki community
+
+Before you start storing important information in ~TiddlyWiki it is vital to make sure that you can reliably save changes. See https://tiddlywiki.com/#GettingStarted for details
+
+!! Set up this ~TiddlyWiki
+
+&lt;div class=&quot;tc-control-panel&quot;&gt;
+
+|&lt;$link to=&quot;$:/SiteTitle&quot;&gt;&lt;&lt;lingo Title/Prompt&gt;&gt;&lt;/$link&gt; |&lt;$edit-text tiddler=&quot;$:/SiteTitle&quot; default=&quot;&quot; tag=&quot;input&quot;/&gt; |
+|&lt;$link to=&quot;$:/SiteSubtitle&quot;&gt;&lt;&lt;lingo Subtitle/Prompt&gt;&gt;&lt;/$link&gt; |&lt;$edit-text tiddler=&quot;$:/SiteSubtitle&quot; default=&quot;&quot; tag=&quot;input&quot;/&gt; |
+|&lt;$link to=&quot;$:/DefaultTiddlers&quot;&gt;&lt;&lt;lingo DefaultTiddlers/Prompt&gt;&gt;&lt;/$link&gt; |&lt;&lt;lingo DefaultTiddlers/TopHint&gt;&gt;&lt;br&gt; &lt;$edit tag=&quot;textarea&quot; tiddler=&quot;$:/DefaultTiddlers&quot;/&gt;&lt;br&gt;//&lt;&lt;lingo DefaultTiddlers/BottomHint&gt;&gt;// |
+&lt;/div&gt;
+
+See the [[control panel|$:/ControlPanel]] for more options.
+</pre>
 </div>
 
 
