Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>StartingWiki — a non-linear personal web notebook</title>
+<title>Bienvenido a esta WikiCompartida — Esta Wiki tiene el fin de compartir información que te sea útil</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -141,6 +141,10 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -156,6 +160,8 @@ Error message and password prompt
 <li>$:/GitHub/Username</li>
 
 <li>$:/isEncrypted</li>
+
+<li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
 
@@ -189,6 +195,12 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20210204060415109" modified="20210204060415109" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
+<pre>show</pre>
+</div>
+<div created="20210204060416823" modified="20210204060416823" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview">
+<pre>show</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -10053,8 +10065,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210203171852243" modified="20210203171913471" title="$:/DefaultTiddlers">
-<pre>StartingWiki</pre>
+<div created="20210203171852243" modified="20210204074527452" title="$:/DefaultTiddlers">
+<pre>Bienvenido a esta WikiCompartida</pre>
 </div>
 <div created="20210203172112935" modified="20210203172138425" title="$:/GitHub/Branch">
 <pre>gh-pages</pre>
@@ -10074,8 +10086,11 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20210203171821032" modified="20210203171916752" title="$:/SiteTitle">
-<pre>StartingWiki</pre>
+<div created="20210204074319840" modified="20210204074500959" title="$:/SiteSubtitle">
+<pre>Esta Wiki tiene el fin de compartir información que te sea útil</pre>
+</div>
+<div created="20210203171821032" modified="20210204074541421" title="$:/SiteTitle">
+<pre>Bienvenido a esta WikiCompartida</pre>
 </div>
 <div created="20210203171801108" modified="20210203171932785" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
@@ -10089,7 +10104,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210203174432928" list="$:/ControlPanel StartingWiki" modified="20210203174432928" title="$:/StoryList">
+<div created="20210204074341617" list="StartingWiki" modified="20210204074341617" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
