Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview</li>
@@ -195,6 +197,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20210204074548020" modified="20210204074548020" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>show</pre>
+</div>
 <div created="20210204060415109" modified="20210204060415109" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
 <pre>show</pre>
 </div>
@@ -10065,8 +10070,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210203171852243" modified="20210204074527452" title="$:/DefaultTiddlers">
-<pre>Bienvenido a esta WikiCompartida</pre>
+<div created="20210203171852243" modified="20210204074616515" title="$:/DefaultTiddlers">
+<pre>StartingWiki</pre>
 </div>
 <div created="20210203172112935" modified="20210203172138425" title="$:/GitHub/Branch">
 <pre>gh-pages</pre>
@@ -10098,13 +10103,13 @@ Error message and password prompt
 <div created="20210203171802541" modified="20210203174815327" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210203171927214" modified="20210203171927214" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20210203171927214" modified="20210204074604945" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210204074341617" list="StartingWiki" modified="20210204074341617" title="$:/StoryList">
+<div created="20210204074605755" list="StartingWiki" modified="20210204074605755" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
