--- a/index.html
+++ b/index.html
@@ -10070,8 +10070,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210203171852243" modified="20210204074616515" title="$:/DefaultTiddlers">
-<pre>StartingWiki</pre>
+<div created="20210203171852243" modified="20210204074630154" title="$:/DefaultTiddlers">
+<pre>Indice</pre>
 </div>
 <div created="20210203172112935" modified="20210203172138425" title="$:/GitHub/Branch">
 <pre>gh-pages</pre>
@@ -10109,7 +10109,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210204074605755" list="StartingWiki" modified="20210204074605755" title="$:/StoryList">
+<div list="StartingWiki" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
