Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Lista de Contenido</li>
+
 <li>StartingWiki</li>
 
 </ul>
@@ -10070,8 +10072,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210203171852243" modified="20210204074630154" title="$:/DefaultTiddlers">
-<pre>Indice</pre>
+<div created="20210203171852243" modified="20210204074706434" title="$:/DefaultTiddlers">
+<pre>IndicedeContenido</pre>
 </div>
 <div created="20210203172112935" modified="20210203172138425" title="$:/GitHub/Branch">
 <pre>gh-pages</pre>
@@ -10109,7 +10111,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div created="20210204074654797" list="StartingWiki [[Lista de Contenido]]" modified="20210204074654797" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10220,6 +10222,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20210204074714648" modified="20210204074727465" title="Lista de Contenido">
+<pre></pre>
 </div>
 <div created="20210203172016312" modified="20210203172018845" title="StartingWiki">
 <pre>\define lingo-base() $:/language/ControlPanel/Basics/
