Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Draft of 'Lista de Contenido'</li>
+
 <li>Lista de Contenido</li>
 
 <li>StartingWiki</li>
@@ -10072,8 +10074,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210203171852243" modified="20210204074706434" title="$:/DefaultTiddlers">
-<pre>IndicedeContenido</pre>
+<div created="20210203171852243" modified="20210204075052706" title="$:/DefaultTiddlers">
+<pre>[[Lista de Contenido]]
+</pre>
 </div>
 <div created="20210203172112935" modified="20210203172138425" title="$:/GitHub/Branch">
 <pre>gh-pages</pre>
@@ -10111,7 +10114,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210204074654797" list="StartingWiki [[Lista de Contenido]]" modified="20210204074654797" title="$:/StoryList">
+<div created="20210204074741879" list="StartingWiki [[Draft of 'Lista de Contenido']]" modified="20210204074742909" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10222,6 +10225,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20210204074714648" draft.of="Lista de Contenido" draft.title="Lista de Contenido" modified="20210204074744669" title="Draft of 'Lista de Contenido'">
+<pre></pre>
 </div>
 <div created="20210204074714648" modified="20210204074727465" title="Lista de Contenido">
 <pre></pre>
