Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -141,8 +141,6 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
-<li>$:/config/DownloadSaver/AutoSave</li>
-
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview</li>
@@ -201,9 +199,6 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20210204075625350" modified="20210204075627578" title="$:/config/DownloadSaver/AutoSave">
-<pre>no</pre>
-</div>
 <div created="20210204060415109" modified="20210204060415109" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
 <pre>show</pre>
 </div>
@@ -12695,25 +12690,25 @@ Error message and password prompt
 <div created="20210203171821032" modified="20210203171916752" title="$:/SiteTitle">
 <pre>StartingWiki</pre>
 </div>
-<div created="20210204075613291" modified="20210204075613291" title="$:/state/tab--1418380610">
+<div created="20210204075821605" modified="20210204075821605" title="$:/state/tab--1418380610">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Languages</pre>
 </div>
-<div created="20210204075606462" modified="20210204075606462" title="$:/state/tab--86143343">
+<div created="20210204075723803" modified="20210204075723803" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
 </div>
-<div created="20210203171801108" modified="20210204075622326" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210203171801108" modified="20210204075722317" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
-<div created="20210203171802541" modified="20210204075634462" title="$:/state/tab-2065006209">
+<div created="20210203171802541" modified="20210203174815327" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210203171927214" modified="20210204075559899" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20210203171927214" modified="20210203171927214" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210204075600714" list="$:/ControlPanel StartingWiki" modified="20210204075600714" title="$:/StoryList">
+<div created="20210204075721079" list="$:/ControlPanel StartingWiki" modified="20210204075721079" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
