--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <!-- The following comment is called a MOTW comment and is necessary for the TiddlyIE Internet Explorer extension -->
 <!-- saved from url=(0021)https://tiddlywiki.com -->
-<html lang="en-GB">
+<html lang="es-ES">
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <!--~~ Raw markup for the top of the head section ~~-->
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>StartingWiki — a non-linear personal web notebook</title>
+<title>Wikiformativa — Esta Wiki tiene el objetivo de ayudarte</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -161,7 +161,11 @@ Error message and password prompt
 
 <li>$:/isEncrypted</li>
 
+<li>$:/language</li>
+
 <li>$:/languages/es-ES</li>
+
+<li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
 
@@ -10090,6 +10094,9 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
+<div created="20210204075840132" modified="20210204075840132" title="$:/language">
+<pre>$:/languages/es-ES</pre>
+</div>
 <div author="Pau DeLuca" core-version="&gt;=5.0.0" dependents="" description="Castellano. (Spain)" name="es-ES" plugin-type="language" title="$:/languages/es-ES" type="application/json" version="5.1.23">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -12687,8 +12694,11 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210203171821032" modified="20210203171916752" title="$:/SiteTitle">
-<pre>StartingWiki</pre>
+<div created="20210204075947426" modified="20210204080028621" title="$:/SiteSubtitle">
+<pre>Esta Wiki tiene el objetivo de ayudarte</pre>
+</div>
+<div created="20210203171821032" modified="20210204075943077" title="$:/SiteTitle">
+<pre>Wikiformativa</pre>
 </div>
 <div created="20210204075821605" modified="20210204075821605" title="$:/state/tab--1418380610">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Languages</pre>
@@ -12696,14 +12706,14 @@ Error message and password prompt
 <div created="20210204075723803" modified="20210204075723803" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
 </div>
-<div created="20210203171801108" modified="20210204075722317" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20210203171801108" modified="20210204075910963" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210203171802541" modified="20210203174815327" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210203171927214" modified="20210203171927214" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20210203171927214" modified="20210204075903866" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
